fixed url to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "http://Kresh24107.github.io/yuriy-app",
   "name": "yuriy-app",
   "version": "0.1.0",
   "private": true,
